# First-Django-App

./: Dockerfile  README.md  devices.csv  docker-compose.yaml  new_order.csv  pyproject.toml
mysite/: log.txt  requirements.txt  shopapp-fixtures.json  shopapp-products-fixture.json  shopapp-products-fixture.xml
mysite/BlogApp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/BlogApp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py
mysite/BlogApp/templates/BlogApp/: article_detail.html  article_list.html
mysite/myapiapp/: serializers.py  urls.py  views.py
mysite/myauth/: forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_photo.py  0003_rename_photo_profile_avatar.py  0004_alter_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  admin_mixin.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  utils.py  views.py
mysite/shopapp/fixtures/: orders-fixtures.json  products-fixtures.json  users-fixtures.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_remove_product_created_at_product_archived.py  0004_order_product_created_at.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_product_user.py  0009_order_receipt.py  0010_product_preview.py  0011_productimages.py  0012_alter_order_options_alter_product_options_and_more.py
(+38 files in other folders)
