[project]
name = "django-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Karina Nigmatzyanova",email = "koresha87@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-filter (>=25.1,<26.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "uritemplate (>=4.1.1,<5.0.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "sqlparse (>=0.5.3,<0.6.0)",
    "snowballstemmer (>=2.2.0,<3.0.0)",
    "rpds-py (>=0.24.0,<0.25.0)",
    "referencing (>=0.36.2,<0.37.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pyflakes (>=3.3.2,<4.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "pydocstyle (>=6.3.0,<7.0.0)",
    "pycodestyle (>=2.13.0,<3.0.0)",
    "packaging (>=24.2,<25.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "jsonschema-specifications (>=2024.10.1,<2025.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "inflection (>=0.5.1,<0.6.0)",
    "flake8-docstrings (>=1.7.0,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "docutils (>=0.21.2,<0.22.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "asgiref (>=3.8.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
